11 - Ajout Blob Picture + Picture Service

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "jwt-service": "^10.0.4",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +48,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.10",
     "@types/supertest": "^2.0.12",
